Fix table border in dark mode (fixes #22)

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -315,7 +315,7 @@ input[type=number] {
 }
 
 .grid-table-td.topBorder {
-  border-top: 1px solid black !important;
+  border-top: 1px solid var(--border-color) !important;
 }
 
 .grid-table-td.won {
